# edda

./: .gitignore  .gitmodules  AUTHORS.md  CMakeLists.txt  Doxyfile  README.md  edda.h.in
distr_modeler/: CMakeLists.txt  VecDistrModeler.h  distr_modeler.h  distributionModeler.h  ensembleExample.cpp  ensembleNetCDF.cpp  exampleEnsembleLoader.cpp  exampleLoader.cpp  exampleSpatialDecompLoader.cpp  spatialDecompositionExample.cpp  testClass.cpp  testClass.h  vectSpatialDecompExample.cpp  vtkDistributionWriter.cpp  vtkDistributionWriter.h
examples/: CMakeLists.txt  MVDistrModelerExample_GMM.cpp  MVDistrModelerExample_Hist.cpp  VectorDistrModelerExample.cpp  distrModelerExample.cpp  genProbIsoField.cpp  gmm_raw2vtk.cpp  isoProbField.C  jointGMMIOExample.cpp  jointHistIOExample.cpp  loadCurvilinearDataset.cpp  loadGaussianScalarField.cpp  loadGaussianVectorField.cpp  loadScalarDataset.cpp  scalarIOExample.cpp  streamlineGaussian.cpp  uncertainIsocontour.cpp  uncertainIsocontour.cu  vectorIOExample.cpp
examples/vtk/: CMakeLists.txt  randomSample.cpp  streamlineGaussianVTK.cpp  streamlineMonteCarlo.cpp  uncertainIsocontourVTK.cpp
html/: AUTHORS_8md.html  CMakeFiles_23_80_82_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp.html  CMakeFiles_23_80_82_2CompilerIdC_2CMakeCCompilerId_8c.html  LICENSE_8md.html  README_8md.html  abstract__data__array_8h.html  abstract__data__array_8h_source.html  abstract__sampling__array_8h.html  abstract__sampling__array_8h_source.html  annotated.html  classcpplint_1_1CleansedLines-members.html  classcpplint_1_1CleansedLines.html  classeddaRandomProbeFilter-members.html  classeddaRandomProbeFilter.html  classeddaRandomProbeFilter_1_1vtkVectorOfArrays.html  classeddaRandomSampleField-members.html  classeddaRandomSampleField.html  classeddaSamplingArray-members.html  classeddaSamplingArray.html  classeddaThreshold-members.html  classeddaThreshold.html  classeddaUncertainIsocontour-members.html  classeddaUncertainIsocontour.html  classedda_1_1AbstractDataArray-members.html  classedda_1_1AbstractDataArray.html  classedda_1_1CartesianGrid-members.html  classedda_1_1CartesianGrid.html  classedda_1_1DataArray-members.html  classedda_1_1DataArray.html  classedda_1_1DataSamplingArray-members.html  classedda_1_1DataSamplingArray.html  classedda_1_1Dataset-members.html  classedda_1_1Dataset.html  classedda_1_1GmmArray-members.html  classedda_1_1GmmArray.html  classedda_1_1GmmNdArray-members.html  classedda_1_1GmmNdArray.html  classedda_1_1GmmVtkDataArray-members.html  classedda_1_1GmmVtkDataArray.html  classedda_1_1Grid-members.html  (+374 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  defines_0.js  defines_1.js  (+69 more)
pyEdda/: CMakeLists.txt  README.md  pyEdda.cpp  py_distribution_modeler.h  py_gaussian.h  py_gmm.h  py_histogram.h  py_joint_gaussian.h  py_joint_histogram.h  test.py  test_joint_histogram.py  test_uni_gmm.py  test_uni_histogram.py
sample_data/: SW6_PIV.txt
src/: CMakeLists.txt  Element.C  Element.h  Field.C  Field.h  Grid.C  Grid.h  Interpolator.h  Solution.C  Solution.h  Tuple.h  VectorMatrix.C  VectorMatrix.h  common.h  data_array.h  dataset.h  dum.C  edda_export.h  grid.cpp  grid.h  header.h  nrrd.C  nrrd.h  structured_grid_dataset.h  vector_matrix.h
src/core/: abstract_data_array.h  abstract_sampling_array.h  data_array.h  gmm_array.h  gmm_ndarray.cpp  gmm_ndarray.cu  gmm_ndarray.h  interpolator.h  ndarray.h  sampling_data_array.h  shared_ary.h  statistics.h  thrust_common.h  thrust_common_functors.h  thrust_gmm_array.h  tuple.h  vector_matrix.h
src/dataset/: CurvilinearGrid.cpp  CurvilinearGrid.h  abstract_data_array.h  abstract_distr_array.h  abstract_sampling_array.h  curvilinear_grid.cpp  curvilinear_grid.h  data_array.h  dataset.h  distr_array.h  grid.cpp  grid.h
src/distributions/: Distribution.h  Gaussian.h  distribution.h  distribution_modeler.h  distribution_tag.h  estimate_gmm.h  gaussian.h  gaussian_mixture.h  gmm.h  histogram.h  joint_GMM.h  joint_gaussian.h  joint_histogram.h  variant.h
src/filters/: random_sample_field.h  stream_tracer.h  uncertain_isocontour.cpp  uncertain_isocontour.cu  uncertain_isocontour.h
src/geometry/: grid.cpp  grid.h
src/io/: edda_reader.cpp  edda_reader.h  edda_vtk_reader.cpp  edda_vtk_reader.h  edda_vtk_writer.cpp  edda_writer.cpp  edda_writer.h  file_reader.cpp  file_reader.h  file_writer.h  gmm_vtk_data_array.cu  gmm_vtk_data_array.h  nrrd.cpp  nrrd.h  path.cpp  path.h
src/math/: statistics.h
src/vtk/: CMakeLists.txt  eddaPlugin.xml  eddaPluginSimple.xml  eddaRandomSampleField.cu  eddaUncertainIsocontour.cpp  eddaUncertainIsocontour.cu  gmm_vtk_data_array.cpp  gmm_vtk_data_array.cu  gmm_vtk_data_array.h  vtkEddaReader.cpp  vtkEddaReader.h  vtkRandomSampleField.cpp  vtkRandomSampleField.cu  vtkRandomSampleField.h  vtkSamplingArray.h  vtkSamplingArray.h.old  vtkUncertainIsocontour.cpp  vtkUncertainIsocontour.cu  vtkUncertainIsocontour.h  vtk_common.h
test/: CMakeLists.txt  bmp_image.h  convertGMM.cpp  testGaussian.C  testGaussian.cpp  test_NdArray.cpp  test_NdArray_cuda.cu  test_distribution.cpp  test_gaussian.cpp  test_histogram_io.cpp  test_jointGMM.cpp  test_jointGMMVar4.cpp  test_jointGaussian.cpp  test_joint_histogram.cpp  test_thrust.cpp  test_thrust.cu  test_thrust_cuda.cu  test_univarianteGMM.cpp  test_variant.cpp  test_vector_field.cpp  test_vtkEddaReader.cpp  test_vtk_pipeline.cpp
vis/examples/: CMakeLists.txt  fuzzyIsocontourVTK.cpp  randomSampleField.cpp  streamlineGaussianVTK.cpp  (+3 more)
vtk/: CMakeLists.txt  test_pipeline.cpp  test_vtkEddaReader.cpp  vtkEddaReader.cpp  vtkEddaReader.h  vtkEddaReader.xml  vtkEddaReaderGUI.xml  vtkSamplingArray.cpp  vtkSamplingArray.h
(+7 files in other folders)
